# keyper

./: Cargo.toml  README.md  flake.nix
src/: api.rs  authorization.rs  cli.rs  client.rs  core.rs  data.rs  main.rs  router.rs  token.rs  user.rs
src/api/: assets.rs  authentication.rs  authorization.rs  token.rs
src/api/templates/: authenticate.html  base.html
src/core/: authorization.rs  data.rs  model.rs  token.rs
src/data/: client.rs
src/repository/: client.rs  main.rs
templates/: authenticate.html  base.html
