[package]
name = "keyper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
chrono = "0.4"
getopts = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tera = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
